# technical-test-kpi

./: README.md  __init__.py  db.py  pyproject.toml
back/: db.py
back/controllers/: investment.py
back/data/: investment.db
back/dto/: investment_dto.py
back/src/apps/investment/models/: investment.py
back/src/apps/investment/repositories/: investment.py
back/src/apps/investment/services/: investment.py
cli/: pyproject.toml
cli/cli/: main.py
front/: README.md  angular.json  package-lock.json  package.json
front/src/: proxy.conf.json
front/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
models/: investment.py
src/apps/investment/models/: etat_avancement_enum.py  investment.py
src/apps/investment/repositories/: investment.py
